--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
   // YOUR HTML HERE
-
+  <div class="result">
+    <h1>Today's weather</h1>
+  </div>
   <script src="./app.js"></script>
 </body>
 </html>
